# Modern-Rendering-Introduction

./: .gitattributes  .gitignore  .gitmodules  AABBIntersection.md  AliasingAndFiltering.md  Bindless.md  ComputeShaders.md  EuclideanSpace.md  GPUArchitecture.md  HardwareRaytracing.md  Introduction.md  LICENSE  Material.md  MatricesAndTransformations.md  MeshShaders.md  Meshes.md  PBR.md  PlaneIntersection.md  ProgrammingEnvironment.md  README.md  Rasterization.md  RayTracing.md  RealtimeComputerGraphics.md  RendererDesign.md  Shaders.md  SimpleCamera.md  SphereIntersection.md  Texturing.md  TheRenderPipeline.md  TriangleIntersection  TriangleIntersection.md  Vectors.md  toc.md
.github/ISSUE_TEMPLATE/: bug_report.md  suggest-an-improvement.md
Media/Images/: Rasterization.drawio  RenderPipeline.drawio
Media/Introduction To Modern Rendering/Assets/: Arrow.cs  FineRasterization.cs  Line.cs  Matrix04FrustumToBox.cs  Matrix05.cs  Plane02.cs  Rasterization.cs  TriangleIntersection03.cs
Media/Introduction To Modern Rendering/Assets/Fonts/: README.md
Media/Introduction To Modern Rendering/Assets/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  HDRenderPipelineGlobalSettings.asset
Media/Introduction To Modern Rendering/Assets/Materials/: Arrow.mat  Blue.mat  Camera Planes.mat  Camera.mat  CullMode Code Back.mat  CullMode Code Front.mat  CullMode Code Off Clip.mat  CullMode Code Off.mat  Green.mat  HDRP_LayeredLit.mat  HDRP_Lit.mat  HDRP_Unlit.mat  HDRP_Volume.mat  Lit Transparent.mat  Lit UV Plane.mat  MeshDataView.mat  MuirWoodWhiteBalanced.mat  Red.mat  (+17 more)
Media/Introduction To Modern Rendering/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PS5Settings.json  ProjectSettings.asset  ScarlettGame.config  TagManager.asset
ModernRenderer/: CMakeLists.txt  Camera.cpp  Camera.hpp  ModernRenderer.vcxproj  ModernRenderer.vcxproj.filters  README.md
ModernRenderer/assets/HDRIs/: README.md  lenong_2_8k.hdr  rogland_overcast_8k.hdr
ModernRenderer/assets/STBN/: README.md
ModernRenderer/assets/models/: Cube.fbx  DragonStatue.glb  Plane.fbx  sphere.fbx
ModernRenderer/assets/models/ABeautifulGame/: LICENSE.md  README.body.md  README.md  metadata.json
ModernRenderer/assets/models/Sponza/: README.md
ModernRenderer/assets/shaders/: BSDF.hlsl  Common.hlsl  Compute.hlsl  ForwardPass.hlsl  GeometryUtils.hlsl  InstanceFrustumCulling.hlsl  Material.hlsl  MathUtils.hlsl  MeshShader.hlsl  MeshUtils.hlsl  MeshletCulling.hlsl  PathTracer.hlsl  PathTracerScene0.hlsl  PathTracingResolve.hlsl  PathTracingUtils.hlsl  PixelShader.hlsl  PixelShaderFromVertex.hlsl  Random.hlsl  RayTracing.hlsl  RayTracingCallable.hlsl  RayTracingHit.hlsl  RayTracingMiss.hlsl  Sky.hlsl  VertexShader.hlsl  VisibilityPass.hlsl  copy.vert.hlsl
ModernRenderer/shaders/: basic_fs.dxi  bindless_vs.dxi  bindless_vs.spv  compute_lum_cs.dxi  compute_lum_cs.spv  compute_present_fs.dxi  compute_present_fs.spv  compute_present_vs.dxi  compute_present_vs.spv  geometry_pass_fs.spv  indirect_cull_cs.dxi  indirect_cull_cs.spv  indirect_fs.dxi  indirect_fs.spv  indirect_vs.dxi  indirect_vs.spv  lighting_pass_fs.dxi  lighting_pass_fs.spv  lighting_pass_vs.dxi  lighting_pass_vs.spv  mesh_shader_ms.dxi  mesh_shader_ms.spv  mesh_shader_ts.dxi  mesh_shader_ts.spv  multithreading_vs.dxi  multithreading_vs.spv  push_constants_vs.dxi  push_constants_vs.spv  rayqueries_fs.dxi  rayqueries_fs.spv  rayqueries_vs.dxi  rayqueries_vs.spv  raytracing_gen.dxi  raytracing_gen.spv  raytracing_hit.dxi  raytracing_hit.spv  raytracing_miss.dxi  raytracing_miss.spv  textures_fs.dxi  textures_fs.spv  (+6 more)
ModernRenderer/src/: BoundingVolumes.cpp  BoundingVolumes.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Frustum.hpp  ImGUIRenderPass.cpp  ImGUIRenderPass.hpp  InputController.hpp  Material.cpp  Material.hpp  MatrixUtils.cpp  MatrixUtils.hpp  Mesh.cpp  Mesh.hpp  MeshPool.cpp  MeshPool.hpp  Model.cpp  Model.hpp  ModelImporter.cpp  ModelImporter.hpp  ModernRenderer.cpp  ModernRenderer.h  Profiler.cpp  Profiler.hpp  RenderDoc.cpp  RenderDoc.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RenderSettings.cpp  RenderSettings.hpp  RenderUtils.cpp  RenderUtils.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  ScreenShotController.hpp  ShaderCache.cpp  ShaderCache.h  (+8 more)
ModernRendering/: Cargo.toml
ModernRendering/src/: camera_controller.rs  main.rs
bevy_modern_rendering/: Cargo.toml
bevy_modern_rendering/bevy_mod_hlsl/: Cargo.toml  README.md
bevy_modern_rendering/bevy_mod_hlsl/src/: lib.rs
bevy_modern_rendering/modern_rendering/: Cargo.toml
bevy_modern_rendering/modern_rendering/assets/shaders/: game_of_life.comp  game_of_life.wgsl  path_tracer_entry.hlsl  path_tracer_entry.spv  path_tracer_entry.wgsl
bevy_modern_rendering/modern_rendering/src/: main.rs  main2.rs
docs/: 404.html  CNAME  Gemfile  _config.yml  about.markdown  index.markdown  index.md
docs/_articles/: AABBIntersection.md  Bindless.md  ComputeShaders.md  EuclideanSpace.md  GPUArchitecture.md  Introduction.md  Material.md  MatricesAndTransformations.md  MeshIntersections.md  MeshShaders.md  Meshes.md  OtherResources.md  PBR.md  PlaneIntersection.md  ProgrammingEnvironment.md  Rasterization.md  RayTracing.md  RealtimeComputerGraphics.md  RenderPasses.md  RendererDesign.md  SimpleCamera.md  Texturing.md  TheRenderPipeline.md  TriangleIntersection.md  Vectors.md  toc.md
docs/_drafts/: AABBIntersection.md  AliasingAndFiltering.md  BxDF.md  FrustumCulling.md  HardwareRaytracing.md  MeshShaders.md  RenderPasses.md  SphereIntersection.md  VisibilityPass.md  toc.md
docs/_includes/: footer-content.html
docs/_posts/: Bindless.md  Introduction.md  Material.md  MeshShaders.md  SimpleCamera.md  SphereIntersection.md  Texturing.md  TriangleIntersection.md  toc.md
docs/assets/Images/: Rasterization.drawio  SimpleRasterization.drawio
modern_renderer/: Cargo.toml
modern_renderer/assets/shaders/: copy.frag.hlsl  path_tracer_entry.hlsl
modern_renderer/spv/: README
modern_renderer/src/: main.rs  renderer.rs  utils.rs
modern_renderer/src/renderer/: render_utils.rs
(+314 files in other folders)
