[package]
name = "ModernRendering"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "4f9f987099224ca41aab91a582b80fca8eb969f8", default-features = false, features=[
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi_threaded",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "bevy_gizmos",
  "tonemapping_luts",
  "default_font",
  "sysinfo_plugin",
  "meshlet",
  "meshlet_processor"
]}
