[package]
name = "modern_renderer"
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4.21"
rusty-d3d12 = "0.5.2"
winapi = { version = "0.3", features = ["winuser", "debugapi", "winbase"] }
winit = "0.24"
clap = "2.33"
widestring = "0.4"
memoffset = "0.5"
hassle-rs = "0.3"
simple_logger = "1.6"
windows = { version = "0.57.0", features = ["Win32_Foundation", "Win32_Graphics_Dxgi_Common", "Win32_Security", "Win32_System", "Win32_System_Threading", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D_Dxc"]}
